# wikipedia_rag_chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: article_clean.txt  article_clean1.txt  chunks.json
data/raw/: History_of_spaceflight.txt  article_raw.txt
src/: chunk.py  clean.py  config.py  embeddings.py  faiss_store.py  fetch.py  llm_intergration.py  retreival.py  wikipedia_chatbot.py
